feat: create basic server with python and poetry

--- a/str_producer/pyproject.toml
+++ b/str_producer/pyproject.toml
@@ -8,7 +8,10 @@ authors = ["Max Simões dos Santos <max.santos@tpv-tech.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 fastapi = "^0.109.0"
+uvicorn = "^0.27.0.post1"
 
+[tool.poetry.scripts]
+start = "str_producer.main:start"
 
 [build-system]
 requires = ["poetry-core"]
