--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -27,6 +27,8 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    volumes:
+      - kafka-data:/var/lib/kafka/data
 
   kafdrop:
     container_name: kafdrop
@@ -45,3 +47,8 @@ networks:
   broker-kafka:
     name: brocker-kafka
     driver: bridge
+
+volumes:
+  kafka-data:
+    name: kafka-data
+    driver: local
