feat: add thread to run consumer kafka and api rest

--- a/str_consumer/pyproject.toml
+++ b/str_consumer/pyproject.toml
@@ -7,8 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+fastapi = "^0.109.0"
+uvicorn = "^0.27.0.post1"
+confluent-kafka = "^2.3.0"
 
+[tool.poetry.scripts]
+start = "str_consumer.main:start"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[virtualenvs]
+path = ".venv"
