--- a/str_producer/docker-compose.yml
+++ b/str_producer/docker-compose.yml
@@ -6,7 +6,13 @@ services:
     build:
       context: .
     env_file:
-      - path: ./config/.env
-        required: true
+      - "./config/.env"
     ports:
-      - ${API_PORT}:${API_PORT}
+      - "3000:3000"
+    networks:
+      - str-producer-ntw
+
+networks:
+  str-producer-ntw:
+    name: str-producer-ntw
+    driver: bridge
