--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -46,6 +46,21 @@ services:
     environment:
       KAFKA_BROKERCONNECT: kafka:29092
 
+  control-center:
+    image: confluentinc/cp-enterprise-control-center:7.6.0
+    container_name: control-center
+    restart: always
+    depends_on:
+      - kafka
+    ports:
+      - "9021:9021"
+    environment:
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'kafka:29092'
+      CONTROL_CENTER_REPLICATION_FACTOR: 1
+      PORT: 9021
+    networks:
+      - broker-kafka
+
 networks:
   broker-kafka:
     name: brocker-kafka
